Bug 119080 - pocheck utility needs an update
Summary: pocheck utility needs an update
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2018-08-03 12:39 UTC by Andras Timar
Modified: 2018-11-21 12:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2018-08-03 12:39:35 UTC
Description:
The structure of po files was reorganized in LibreOffice 6.0. 

l10ntools/source/pocheck.cxx was not adapted, therefore it does not do its job.

Steps to Reproduce:
.

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Andras Timar 2018-08-04 16:19:13 UTC
Invocation of pocheck:

LD_LIBRARY_PATH=instdir/program make cmd cmd=workdir/LinkTarget/Executable/pocheck

Currently it gives a lot of warnings because of missing po files. 

Unfortunately it takes more that just changing the po file names in l10ntools/source/pocheck.cxx. I got an "pocheck: exception std::exception". It seems that the problem is, that the #, c-format flag is not handled (exception is thrown when the po parser reads an entry with this flag). But this flag should not be there in the first place, because there are no true C format strings in LibreOffice strings. It is an artifact from the underlying xgettext call. I would rather leave this to someone else.

I think, it would be good to fix pocheck, because it prevents various runtime errors. For example there are clashing style names in various languages (I saw German, Japanese) in LibreOffice 6.0 and onwards.
Comment 2 Aron Budea 2018-09-16 15:56:00 UTC
Sophie, this seems to be an important l10n tool, perhaps it would be useful to consider running it regularly, and including the results in the l10n stats (for which the program has to be fixed first). Could you please bring up the topic during the ESC call?
Comment 3 Commit Notification 2018-09-30 20:00:43 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1139c76b60b9a9f6df2bc53deb6c1c1cba42178d

pocheck: tdf#119080 update po checker tool for post LO 6.0 po files

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-11-21 12:41:17 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/2e7c36051ea0980252238def5c48481fd72ab0be%5E%21

pocheck: tdf#119080 update po checker tool for post LO 6.0 po files

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.