pocheck: tdf#119080 update po checker tool for post LO 6.0 po files

Change-Id: I700eaa0d412fb609fdc89ca07003534e6bb13854
(cherry picked from commit 1139c76b60b9a9f6df2bc53deb6c1c1cba42178d)
Reviewed-on: https://gerrit.libreoffice.org/63599
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>